<resources>
    <string name="app_name" translatable="false">Pokemon</string>
    <string name="navigation_list">List</string>
    <string name="navigation_new_pokemon">Register a new Pokemon</string>
    <string name="navigation_about">About</string>
    <string name="title_activity_main" translatable="false">Pokemon</string>
    <string name="et_login">Login</string>
    <string name="et_password">Password</string>
    <string name="et_log_in">Log in</string>
    <string name="register">Register</string>
    <string name="login_failed">Login/Password invalid. Try again</string>
    <string name="user_registered_successfully">User registered successfully!</string>
    <string name="pokemon_registered_successfully">Pokemon registered successfully!</string>
    <string name="save">Save</string>
    <string name="et_name">Name</string>
    <string name="login">Login</string>
    <string name="message_error">Something went wrong, try again later.</string>
    <string name="title_error">Error!</string>
    <string name="loading">Loading...</string>
    <string name="pokemon_name">Name</string>
    <string name="pokemon_type">Type</string>
    <string name="pokemon_pokeball">Pokeball Captured</string>
    <string name="pokemon_updated_successfully">Pokemon updated successfully</string>
    <string name="pokeball_captured">Pokeball Captured</string>
    <string name="made_by_fan_to_fan">Made by fan to fan</string>
    <string name="your_portable_pok_dex">Your Portable Pokédex</string>
</resources>
